Stop metric buttons shifting map

--- a/style.css
+++ b/style.css
@@ -251,5 +251,5 @@ body {
 }
 
 .speed-map {
-  margin-left: 150px;
+  margin-left: 0;
 }
